Kleine Änderungen:)